# MVP-Project-z00help

./: .gitignore  README.md  db.sqlite3  pyproject.toml
hw2/: settings.py  urls.py
news/: forms.py  middleware.py  models.py  urls.py  views.py
news/migrations/: 0001_initial.py  0002_otclickofpost_likesofpost.py  0003_alter_likesofpost_bolean_alter_otclickofpost_bolean.py  0004_alter_comment_created_at_alter_news_created_at.py  0005_message.py  0006_customuser_phone_ownanimal_animalimage.py  0007_alter_ownanimal_owner.py  0008_rename_post_take_animal_animalimage_animal.py  0009_ownanimal_created_at_ownanimal_type.py  0010_commentforownanimal.py  0011_likesofanimal.py  0012_rename_post_likesofanimal_animal.py  0013_alter_ownanimal_content.py  0014_alter_ownanimal_content.py  0015_alter_animalimage_image_alter_customuser_image_and_more.py  0016_alter_animalimage_image_alter_customuser_image_and_more.py  0017_comment_likes_likesoftakeanimalcomment.py  0018_likesofanimalcomment.py  0019_commentforownanimal_likes.py
news/static/images/: images.jfif
news/static/news/css/: for_direct_of_user.css  styl.css  styl1.css  style_for_change2.css  style_info.css  style_info_news1.css  (+3 more)
news/templates/news/: add_animal.html  add_news.html  animal_data_change.html  animal_of_user.html  change_news.html  detail_of_animal.html  direct.html  get_all_news.html  info_news.html  info_user.html  main_page.html  own_direct_to_me.html  own_direct_to_other.html  password_change_form.html  user_data_change_form.html  users.html
news/templates/registration/: login.html  sign_up.html
(+1 files in other folders)
