[tool.poetry]
name = "MVP_project"
version = "0.1.0"
description = ""
authors = ["Ramazan <syrlybai056@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
django-debug-toolbar = "^4.2.0"
djangorestframework = "^3.14.0"
pillow = "^10.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
